// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BAN CivPanels render correctly 1`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Aztecs",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 2`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Berbers",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 3`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Britons",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 4`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Burmese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 5`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Byzantines",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 6`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Celts",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 7`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Chinese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 8`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Ethiopians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 9`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Franks",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 10`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Goths",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 11`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Huns",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 12`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Incas",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 13`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Indians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 14`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Italians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 15`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Japanese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 16`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Khmer",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 17`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Koreans",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 18`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Magyars",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 19`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Malay",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 20`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Malians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 21`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Mayans",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 22`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Mongols",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 23`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Persians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 24`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Portuguese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 25`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Saracens",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 26`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Slavs",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 27`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Spanish",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 28`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Teutons",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 29`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Turks",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 30`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Vietnamese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`BAN CivPanels render correctly 31`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Vikings",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 1`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Aztecs",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 2`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Berbers",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 3`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Britons",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 4`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Burmese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 5`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Byzantines",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 6`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Celts",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 7`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Chinese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 8`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Ethiopians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 9`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Franks",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 10`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Goths",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 11`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Huns",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 12`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Incas",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 13`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Indians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 14`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Italians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 15`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Japanese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 16`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Khmer",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 17`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Koreans",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 18`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Magyars",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 19`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Malay",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 20`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Malians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 21`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Mayans",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 22`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Mongols",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 23`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Persians",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 24`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 4,
      "isRandomlyChosenCiv": false,
      "name": "Portuguese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 25`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Saracens",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 26`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 3,
      "isRandomlyChosenCiv": false,
      "name": "Slavs",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 27`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 2,
      "isRandomlyChosenCiv": false,
      "name": "Spanish",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 28`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Teutons",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 29`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Turks",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 30`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 5,
      "isRandomlyChosenCiv": false,
      "name": "Vietnamese",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`PICK CivPanels render correctly 31`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  civilisation={
    Civilisation {
      "gameVersion": 1,
      "isRandomlyChosenCiv": false,
      "name": "Vikings",
    }
  }
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`empty BAN CivPanel renders correctly 1`] = `
<CivPanel
  active={false}
  civPanelType="ban"
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;

exports[`empty PICK CivPanel renders correctly 1`] = `
<CivPanel
  active={false}
  civPanelType="pick"
  i18n={Object {}}
  t={[Function]}
  tReady={true}
/>
`;
